Issue 107: changing the z-index to account for when the mobile nav is triggered

--- a/client/templates/app/nav/_nav.sass
+++ b/client/templates/app/nav/_nav.sass
@@ -6,7 +6,7 @@ body.home, body.show-initiative
     box-shadow: none
     
 nav
-  z-index: 1
+  z-index: 2
   .nav-wrapper
     .button-collapse
       margin-left: 10px
